--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-    <div class="shadowTop" style="">
+    <div class="shadowTop" style="z-index:1000;">
         <div style="width: 960px; margin: 0 auto;">
             <div class="posRel centerDiv" style="width: 90%; height: 80px;">
                 <div class="posRel inlineBlock width100 centerText adam colRed fontSize18" style="line-height: 80px;">
