--- a/members.html
+++ b/members.html
@@ -177,7 +177,7 @@
             else if (major=='MEC' || major=='ME')       {  return 'Mechanical Engineering';                                     }
             else if (major=='AMS' )                     {  return '<div class="fontSize14">Applied Math and Statistics</div>';  }
             else if (major=='ES' )                      {  return 'Environmental Science';                                      }
-            else if (major=='TSM' )                     {  return 'Technical Systems Management';                               }
+            else if (major=='TSM' )                     {  return '<div class="fontSize14">Technical Systems Mgmt.</div>'; }
             else                                        {  return '';                                                           }
         }
 
