--- a/mobile.html
+++ b/mobile.html
@@ -22,6 +22,9 @@
 
     <script>
         $(document).ready(function(){
+            $('#header').load("header.html");
+            $('#footer').load("footer.html");
+
             $("#slideshow > div:gt(0)").hide();
 
             setInterval(function() {
@@ -53,7 +56,7 @@
 <div id="header"></div>
 
 <!-- Welcome Letter-->
-<div class="posRel inlineBlock roboto centerDiv vertAlignTop centerText bordRad5 shadow colWhite fontSize20" style="background-color: #464646; top: 50px;margin-bottom: 120px; width: 550px;height: 300px;z-index: 11;">
+<div class="posRel inlineBlock roboto centerDiv vertAlignTop centerText bordRad5 shadow colWhite fontSize20" style="background-color: #464646; top: 50px;margin-bottom: 75px; width: 550px;height: 400px;z-index: 11;">
     <img src='images/symbols/spdpic.jpg' class="height100 width100" style="opacity: 0.3;"/>
 
     <div class="posAbs height100 top0" style="width:90%;margin: 0 5%;">
@@ -79,7 +82,7 @@
 </div>
 
 <!-- Interested in Rushing?-->
-<div class="posRel inlineBlock roboto centerDiv vertAlignTop centerText bordRad5 shadow colWhite fontSize20" style="background-color: #464646; top: 50px; margin-bottom: 50px; width: 550px;height: 300px;z-index: 11;">
+<div class="posRel inlineBlock roboto centerDiv vertAlignTop centerText bordRad5 shadow colWhite fontSize20" style="background-color: #464646; margin-top: 50px;margin-bottom: 150px; width: 550px;height: 350px;z-index: 11;">
     <img src='https://pbs.twimg.com/profile_images/2620742352/banner1.jpg' class="height100 width100" style="opacity: 0.6;"/>
 
     <div class="posAbs height100 top0" style="width:90%;margin: 0 5%;">
@@ -87,7 +90,7 @@
         <p>The academic, professional, and networking opportunities are boundless as a member of Sigma Phi Delta.
             Learn in detail about these opportunities and how to join Sigma Phi Delta at our RUSH page.</p>
         <a href="rush.html" class="textDecNone">
-            <div id="rushBtn" class="vertAlignTop centerText fontSize28" style="height: 7%;">SPRING RUSH 2016</div>
+            <div id="mobRushBtn" class="vertAlignTop centerText fontSize28" style="height: 7%;">SPRING RUSH 2016</div>
         </a>
     </div>
 </div>
