Changed around some of the pictures for the contact page and mobile page

--- a/contact.html
+++ b/contact.html
@@ -188,7 +188,7 @@
     <!-- Sigma Phi Delta -->
     <div class="grid inlineBlock posRel inlineBlock vertAlignTop overflowHidden shadowContact" style="">
         <figure class="effect-ming" style=''>
-            <img src="images/symbols/spdpic.jpg" height="100%" width="100%" style="opacity: 0.4;"/>
+            <img src="https://pbs.twimg.com/profile_images/2620742352/banner1.jpg" height="100%" width="100%" style="opacity: 0.4;"/>
             <figcaption>
                 <div class="h2">Learn More About <span>Sigma Phi Delta</span>
                     <div class="fontSize20 centerText posRel colWhite" style="margin: 0 auto;height:5px;bottom: 10px;">&middot;&middot;&middot;</div>
@@ -231,7 +231,7 @@
     <!-- Rush Chairman -->
     <div class="grid inlineBlock posRel inlineBlock vertAlignTop overflowHidden shadowContact" style="margin-left: 15px;margin-top: 20px;">
         <figure class="effect-ming" style=''>
-            <img src="https://pbs.twimg.com/profile_images/2620742352/banner1.jpg" height="100%" width="100%" style="opacity: 0.4;"/>
+            <img src="images/symbols/spdbw.png" height="100%" width="100%" style="opacity: 0.4;"/>
             <figcaption>
                 <div class="h2 posRel centerText">Contact Our <span>Rush Chairman</span>
                     <div class="fontSize20 centerText posRel colWhite" style="margin: 0 auto;height:5px;bottom: 10px;">&middot;&middot;&middot;</div>
