--- a/mobile.html
+++ b/mobile.html
@@ -83,7 +83,7 @@
 
 <!-- Interested in Rushing?-->
 <div class="posRel inlineBlock roboto centerDiv vertAlignTop centerText bordRad5 shadow colWhite fontSize20" style="background-color: #464646; margin-top: 50px;margin-bottom: 150px; width: 550px;height: 350px;z-index: 11;">
-    <img src='https://pbs.twimg.com/profile_images/2620742352/banner1.jpg' class="height100 width100" style="opacity: 0.6;"/>
+    <img src='images/symbols/spdcoatofarms.jpg' class="height100 width100 posRel" style="opacity: 0.2;"/>
 
     <div class="posAbs height100 top0" style="width:90%;margin: 0 5%;">
         <div class="fontSize36 amaranth" style="margin: 25px 0 25px 0;">Interested in joining?</div>
