Going to try to implement isotope for masonry sorting

--- a/members.html
+++ b/members.html
@@ -32,6 +32,10 @@
     <!-- Masonry -->
     <script src="js/masonry.pkgd.min.js"></script>
 
+    <!-- Masonry Isotope -->
+    <script src="js/isotope.pkgd.min.js"></script>
+
+
     <script type="text/javascript">
 
         // Parses a google spreadsheet and dynamically creates HTML elements with information from the spreadsheet
@@ -221,11 +225,13 @@
                     for(var i=0;i<elements.length;i++){
                         if (elements[i].getElementsByClassName('selCat')[catVal].innerHTML != val){
                             elements[i].style.opacity = '0.5';
-                            var tr = $("<div class='inlineBlock backColWhite bordRad5 grid-item roboto' style=' text-align: left; width: 250px;margin: 20px;'>" + elements[i].innerHTML + "</div>");
-                            $('#data').masonry( 'prepended', tr );
+
                         }
                         else{
                             elements[i].style.opacity = '1';
+                            var tr = $("<div class='inlineBlock backColWhite bordRad5 grid-item roboto' style=' text-align: left; width: 250px;margin: 20px;'>" + elements[i].innerHTML + "</div>");
+                            var vr = elements[i];
+                            $('#data').masonry( 'prepended', vr );
                         }
                     }
                 }
