--- a/members.html
+++ b/members.html
@@ -12,10 +12,13 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 
     <!-- Load in the javascript file -->
-    <script language="javascript" type="text/javascript" src="js/index.js"></script>
+    <script language="javascript" type="text/javascript" src="js/main.js"></script>
 
     <!-- Load in the CSS file -->
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+
+    <!-- Load in the CSS file -->
+    <link rel="stylesheet" type="text/css" href="css/members.css">
 
     <!-- Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
@@ -35,7 +38,7 @@
     <!-- Masonry Isotope -->
     <script src="js/isotope.pkgd.min.js"></script>
 
-
+    <!-- Load in the javascript file for members -->
     <script type="text/javascript">
 
         // Parses a google spreadsheet and dynamically creates HTML elements with information from the spreadsheet
@@ -287,17 +290,6 @@
             });
         });
     </script>
-
-    <!-- CSS for resizing the number of columns for the page width -->
-    <style>
-        @media all and (min-width:300px) {  #membersContainer{  width: 300px;  }   #load{left:-5%;} }
-        @media all and (min-width:600px) {  #membersContainer{  width: 590px;  }   #load{left: -3%;}  }
-        @media all and (min-width:900px) {  #membersContainer{  width: 880px;  }   #load{left: 0;}  }
-        @media all and (min-width:1200px) {  #membersContainer{  width: 1170px;  } #load{left: 13%;}   }
-        @media all and (min-width:1500px) {  #membersContainer{  width: 1460px;  } #load{left: 19%;}  }
-        @media all and (min-width:1800px) {  #membersContainer{  width: 1750px;  } #load{left: 25%;}  }x
-    </style>
-
 </head>
 
 <body id="pageone" class="posRel width100 height100 overflowXHidden backColBackGround marg0 pad0">
