--- a/rush.html
+++ b/rush.html
@@ -12,10 +12,10 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 
     <!-- Load in the javascript file -->
-    <script language="javascript" type="text/javascript" src="js/index.js"></script>
+    <script language="javascript" type="text/javascript" src="js/main.js"></script>
 
     <!-- Load in the CSS file -->
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 
     <!-- Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
@@ -29,26 +29,8 @@
     <!-- Color Animations -->
     <script src="js/jquery.color.js"></script>
 
-    <style>
-        strong{
-            color: #DB2B2A;
-            font-weight:normal;
-        }
-        @media only screen and (max-width: 699px) {
-            #rushflier {
-                float: none;
-                display: block;
-                width: 80%;
-                height: 90%;
-                border: 1px solid red;
-            }
-        }
-        .circShadow{
-            -webkit-box-shadow: 0 5px 10px 0 #464646;
-            -moz-box-shadow: 0 5px 10px 0 #464646;
-            box-shadow: 0 5px 10px 0 #464646;
-        }
-    </style>
+    <!-- Load in the CSS file -->
+    <link rel="stylesheet" type="text/css" href="css/rush.css">
 
 </head>
 
@@ -103,7 +85,7 @@
 
     <!-- Professional Benefits -->
     <div class="centerVert leftText" style="margin: 55px 0 0 0;border: 2px solid #F7302F;border-radius: 5px 225px 225px 5px;">
-        <div class="inlineBlock vertAlignTop fontSize16 lineHeight24" style="padding: 0 25px;width: 70%;">Possibly some of the greatest advantages of membership in Sigma Phi Delta are the career development opportunities.
+        <div class="inlineBlock vertAlignTop fontSize16 lineHeight24" style="padding: 8px 25px;width: 70%;">Possibly some of the greatest advantages of membership in Sigma Phi Delta are the career development opportunities.
             As a member of <strong>PGC (Professional Greek Council)</strong> we have access to unique opportunities to help build up a strong
             professional side in any student especially through events we've previously hosted such as 'Ask an Engineer',
             STEM panels, resume reviews, and mock interviews with alumni. Many of our members have received internships while
@@ -149,7 +131,7 @@
 
     <!-- Brotherhood -->
     <div class="centerVert leftText" style="margin: 55px 0 0 0;border: 2px solid #F7302F;border-radius: 5px 225px 225px 5px;">
-        <div class="inlineBlock vertAlignTop fontSize16 lineHeight24" style="padding: 0 25px;width: 70%; line-height: 32px;">
+        <div class="inlineBlock vertAlignTop fontSize16 lineHeight24" style="padding: 8px 25px;width: 70%; line-height: 32px;">
             The most important aspect of Sigma Phi Delta; however, is its <strong>close-knit, diverse brotherhood</strong>. The men of Sigma Phi
                 Delta come from all corners of the country, as well as different areas of the world. Being a member of Sigma Phi
                 Delta not only gives you people to study and hang out with, but gives you <strong>friendships that last a lifetime</strong>
