--- a/contact.html
+++ b/contact.html
@@ -12,10 +12,10 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 
     <!-- Load in the javascript file -->
-    <script language="javascript" type="text/javascript" src="js/index.js"></script>
+    <script language="javascript" type="text/javascript" src="js/main.js"></script>
 
     <!-- Load in the CSS file -->
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 
     <!-- Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
@@ -29,153 +29,8 @@
     <!-- Color Animations -->
     <script src="js/jquery.color.js"></script>
 
-    <style>
-        .grid {
-            position: relative;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-        }
-
-        /* Common style */
-        .grid figure {
-            position: relative;
-            float: left;
-            overflow: hidden;
-            /*margin: 10px 1%;*/
-            margin: 0;
-            width: 470px;
-            height: 270px;
-            background: #3085a3;
-            text-align: center;
-            cursor: pointer;
-        }
-
-        .grid figure img {
-            position: relative;
-            display: block;
-            min-height: 100%;
-            max-width: 100%;
-            opacity: 0.6;
-        }
-
-        .grid figure figcaption {
-            color: #fff;
-            /*text-transform: uppercase;*/
-            font-size: 1.25em;
-            -webkit-backface-visibility: hidden;
-            backface-visibility: hidden;
-        }
-
-        .grid figure figcaption::before,
-        .grid figure figcaption::after {
-            pointer-events: none;
-        }
-
-        .grid figure figcaption,
-        .grid figure figcaption > a {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-        }
-
-        /* Anchor will cover the whole item by default */
-        /* For some effects it will show as a button */
-        .grid figure figcaption > a {
-            z-index: 1000;
-            text-indent: 200%;
-            white-space: nowrap;
-            font-size: 0;
-            opacity: 0;
-        }
-
-        .grid figure div.h2 {
-            font-weight: 200;
-            font-family: Amaranth, sans-serif;
-            font-size: 1.5em;
-        }
-
-        .grid figure div.h2 span {
-            font-weight: bold;
-        }
-
-        .grid figure div.h2,
-        .grid figure p {
-            margin: 0;
-        }
-
-        .grid figure p {
-            letter-spacing: 1px;
-            font-size: 68.5%;
-        }
-        figure.effect-ming {
-            background: #030c17;
-        }
-
-        figure.effect-ming img {
-            opacity: 0.9;
-            -webkit-transition: opacity 0.35s;
-            transition: opacity 0.35s;
-        }
-
-        figure.effect-ming figcaption::before {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            bottom: 20px;
-            left: 20px;
-            border: 2px solid #fff;
-            box-shadow: 0 0 0 30px rgba(255,255,255,0.2);
-            content: '';
-            opacity: 0;
-            -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-            transition: opacity 0.35s, transform 0.35s;
-            -webkit-transform: scale3d(1.4,1.4,1);
-            transform: scale3d(1.4,1.4,1);
-        }
-
-        figure.effect-ming div.h2 {
-            margin: 10% 0 10px 0;
-            -webkit-transition: -webkit-transform 0.35s;
-            transition: transform 0.35s;
-        }
-
-        figure.effect-ming p {
-            padding: 10px 40px;
-            opacity: 0;
-            -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-            transition: opacity 0.35s, transform 0.35s;
-            -webkit-transform: scale(1.5);
-            transform: scale(1.5);
-            font-family: 'Roboto', sans-serif;
-            font-size: 14px;
-            line-height: 21px;
-        }
-
-        figure.effect-ming:hover div.h2 {
-            -webkit-transform: scale(0.9);
-            transform: scale(0.9);
-        }
-
-        figure.effect-ming:hover figcaption::before,
-        figure.effect-ming:hover p {
-            opacity: 1;
-            -webkit-transform: scale3d(1,1,1);
-            transform: scale3d(1,1,1);
-        }
-
-        figure.effect-ming:hover figcaption {
-            background-color: rgba(58,52,42,0);
-        }
-
-        figure.effect-ming:hover img {
-            opacity: 0.4;
-        }
-
-    </style>
-
+    <!-- Load in the CSS file -->
+    <link rel="stylesheet" type="text/css" href="css/contact.css">
 </head>
 
 <body id="pageone" class="posRel width100 height100 overflowXHidden backColBackGround marg0 pad0">
