--- a/mobile.html
+++ b/mobile.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="images/symbols/spdlogo.jpg">
 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 
     <!-- Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
@@ -20,35 +20,11 @@
     <!-- Color Animations -->
     <script src="js/jquery.color.js"></script>
 
-    <script>
-        $(document).ready(function(){
-            $('#header').load("header.html");
-            $('#footer').load("footer.html");
+    <!-- Load in the javascript file -->
+    <script language="javascript" type="text/javascript" src="js/mobile.js"></script>
 
-            $("#slideshow > div:gt(0)").hide();
-
-            setInterval(function() {
-                $('#slideshow > div:first')
-                        .fadeOut(1000)
-                        .next()
-                        .fadeIn(1000)
-                        .end()
-                        .appendTo('#slideshow');
-            },  3000);
-
-        });
-    </script>
-
-    <style>
-        .imgCont{
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            right: 0;
-            left: 0;
-        }
-    </style>
-
+    <!-- Load in the CSS file -->
+    <link rel="stylesheet" type="text/css" href="css/mobile.css">
 </head>
 
 <body id="pageone" class="posRel centerText width100 height100 overflowXHidden backColBackGround marg0 pad0">
@@ -56,11 +32,11 @@
 <div id="header"></div>
 
 <!-- Welcome Letter-->
-<div class="posRel inlineBlock roboto centerDiv vertAlignTop centerText bordRad5 shadow colWhite fontSize20" style="background-color: #464646; top: 50px;margin-bottom: 75px; width: 550px;height: 400px;z-index: 11;">
+<div class="posRel inlineBlock roboto centerDiv vertAlignTop centerText bordRad5 shadow colWhite fontSize20" style="background-color: #464646; top: 50px;margin-bottom: 75px; width: 550px;height: 350px;z-index: 11;">
     <img src='images/symbols/spdpic.jpg' class="height100 width100" style="opacity: 0.3;"/>
 
     <div class="posAbs height100 top0" style="width:90%;margin: 0 5%;">
-        <div class="amaranth fontSize36" style="margin: 25px 0 25px 0;">Welcome to Sigma Phi Delta!</div>
+        <div class="amaranth fontSize32" style="margin: 25px 0 25px 0;">Welcome to Sigma Phi Delta!</div>
         <p>We are a <strong>professional</strong> and <strong>social</strong> engineering fraternity made up of the most excellent male engineers at
             Stony Brook University. Our fraternity is dedicated to guiding its members towards professional and <strong>academic
                 success</strong> while enriching the college experience for engineering students.</p>
