Fixing mobile bugs:

--- a/about.html
+++ b/about.html
@@ -151,9 +151,9 @@
 
             <!-- SPD Flag -->
             <div class="posRel inlineBlock centerText">
-                <div class="colRed amaranth fontSize28">Motto</div>
-                <div>"Pro Bono Professionis"</div>
-                <div>For the good of the profession.</div>
+                <div class="colRed amaranth fontSize36">Motto</div>
+                <div class="fontSize22">"Pro Bono Professionis"</div>
+                <div class="fontSize22">For the good of the profession.</div>
             </div>
 
             <!-- SPD Pledge Pin -->
