--- a/rush.html
+++ b/rush.html
@@ -39,7 +39,7 @@
 <div id="header"></div>
 
 <!-- Content -->
-<div class="posRel roboto fontSize20 leftText" style="min-width: 900px; margin: 40px auto 120px auto;min-height: 500px; width: 60%;">
+<div class="posRel roboto fontSize20 leftText" style="width: 1060px; margin: 40px auto 120px auto;min-height: 500px;">
 
     <!-- Introduction -->
     <div style="margin: 20px 0 55px 0;">
@@ -53,7 +53,7 @@
         </div>
 
         <!-- Introduction Paragraph -->
-        <div class="fontSize16 lineHeight24" style="margin-top: 25px;">
+        <div class="" style="font-size: 1em; line-height: 24px; margin-top: 25px;">
             As the Premier International Fraternity of Engineers, Sigma Phi Delta and its members boast a strong embrace in the
             <strong>"work hard, play hard"</strong> mentality. With that said, the Beta-Eta Chapter at Stony Brook University proves itself to be
             both a social and professional organization. Rush is an excellent opportunity in which anyone interested in
