--- a/rush.html
+++ b/rush.html
@@ -39,7 +39,7 @@
 <div id="header"></div>
 
 <!-- Content -->
-<div class="posRel roboto fontSize20 leftText" style="width: 1060px; margin: 40px auto 120px auto;min-height: 500px;">
+<div class="posRel roboto fontSize20 leftText" style="width: 960px; margin: 40px auto 120px auto;min-height: 500px; ">
 
     <!-- Introduction -->
     <div style="margin: 20px 0 55px 0;">
@@ -47,10 +47,10 @@
         <div class="inlineBlock amaranth colRed fontSize36">Why rush Sigma Phi Delta?</div>
 
         <!-- List of Rush Events -->
-        <div id="rushflier" class="shadow inlineBlock floatRight vertAlignTop pad0 leftText" style="width: 600px; height: 222px; margin: 25px 0 0 25px;border: 5px solid #191919;">
+        <a id="rushflier" href="images/fliers/spring2016/rush.png"><div class="shadow inlineBlock floatRight vertAlignTop pad0 leftText" style="width: 600px; height: 222px; margin: 25px 0 0 25px;border: 5px solid #191919;">
             <!-- Rush Flier -->
             <img src="images/fliers/spring2016/rush.png" height="100%" width="100%"/>
-        </div>
+        </div></a>
 
         <!-- Introduction Paragraph -->
         <div class="" style="font-size: 1em; line-height: 24px; margin-top: 25px;">
@@ -64,15 +64,15 @@
 
     <!-- Academic Benefits -->
     <div class="centerVert rightText">
-        <div class="centerText vertAlignTop colWhite inlineBlock" style="height: 300px; width: 300px;">
-            <div class="colWhite bordRad50 height100 width100 circShadow backColRed"  style="display:flex;justify-content:center;align-items:center;">
+        <div class="centerText vertAlignTop colWhite inlineBlock">
+            <div class="colWhite bordRad50 height100 width100 circShadow backColRed"  style="height: 300px; width: 300px;display:flex;justify-content:center;align-items:center;">
                 <div>
                     <img src="icons/academics.png" height="175px" width="150px" class="block centerDiv"/>
                     <div class="amaranth fontSize20" style="height: 50px;padding-top: 5px;">Academic Benefits</div>
                 </div>
             </div>
         </div>
-        <div class="inlineBlock vertAlignTop fontSize16 lineHeight24" style="padding: 0 25px;width: 70%;">
+        <div class="inlineBlock vertAlignTop fontSize16 lineHeight24 redBorder" style="width: 70%;">
             No one can truly understand the full perils and workload of a major except those within the major. The members of
             Sigma Phi Delta are all within CEAS (College of Engineering and Applied Sciences), covering a solid breathe of its
             encompassing majors. Members benefit from working along side one another <strong>garnering homework help, study aid, advice
@@ -84,8 +84,8 @@
     </div>
 
     <!-- Professional Benefits -->
-    <div class="centerVert leftText" style="margin: 55px 0 0 0;border: 2px solid #F7302F;border-radius: 5px 225px 225px 5px;">
-        <div class="inlineBlock vertAlignTop fontSize16 lineHeight24" style="padding: 8px 25px;width: 70%;">Possibly some of the greatest advantages of membership in Sigma Phi Delta are the career development opportunities.
+    <div class="centerVert leftText" style="margin: 55px 0 0 0;">
+        <div class="inlineBlock vertAlignTop fontSize16 lineHeight24 redBorder" style="width: 70%;">Possibly some of the greatest advantages of membership in Sigma Phi Delta are the career development opportunities.
             As a member of <strong>PGC (Professional Greek Council)</strong> we have access to unique opportunities to help build up a strong
             professional side in any student especially through events we've previously hosted such as 'Ask an Engineer',
             STEM panels, resume reviews, and mock interviews with alumni. Many of our members have received internships while
@@ -99,8 +99,8 @@
             secure <strong>internships and positions offering them exclusively to members of Sigma Phi Delta</strong>. In the modern competitive
             job market, who you know is just as important as what you know.-->
         </div>
-        <div class="centerText vertAlignTop colWhite inlineBlock" style="height: 300px; width: 300px;">
-            <div class="colWhite bordRad50 height100 width100 circShadow backColRed" style="display:flex;justify-content:center;align-items:center;">
+        <div class="centerText vertAlignTop colWhite inlineBlock">
+            <div class="colWhite bordRad50 height100 width100 circShadow backColRed" style="height: 300px; width: 300px;display:flex;justify-content:center;align-items:center;">
                 <div>
                     <img src="icons/professional5.png" height="175px" width="150px" class="block centerDiv"/>
                     <div class="amaranth fontSize20" style="height: 50px;padding-top: 5px;">Professional Benefits</div>
@@ -112,15 +112,15 @@
 
     <!-- Social Benefits -->
     <div class="centerVert rightText" style="margin: 55px 0 0 0;">
-        <div class="centerText vertAlignTop colWhite inlineBlock" style="height: 300px; width: 300px;">
-            <div class="colWhite bordRad50 height100 width100 circShadow backColRed" style="display:flex;justify-content:center;align-items:center;">
+        <div class="centerText vertAlignTop colWhite inlineBlock">
+            <div class="colWhite bordRad50 height100 width100 circShadow backColRed" style="height: 300px; width: 300px;display:flex;justify-content:center;align-items:center;">
                 <div>
                     <img src="icons/crowd.png" height="150px" width="150px" class="block centerDiv"/>
                     <div class="amaranth fontSize20" style="height: 50px;padding-top: 5px;">Social Benefits</div>
                 </div>
             </div>
         </div>
-        <div class="inlineBlock vertAlignTop fontSize16 lineHeight24" style="padding: 0 25px;width: 70%; line-height: 28px;">
+        <div class="inlineBlock vertAlignTop fontSize16 lineHeight24 redBorder" style="width: 70%; line-height: 28px;">
             While we highly hold the beliefs of strong academics and profession success we also fully understand the importance
             of experiencing the social opportunities university has to offer, as we are only here for so long. Sigma Phi Delta
             engages in a broad spectrum of social activities such as <strong>intramural sports, collaborated events, tailgates</strong>, and participation
@@ -130,16 +130,16 @@
     </div>
 
     <!-- Brotherhood -->
-    <div class="centerVert leftText" style="margin: 55px 0 0 0;border: 2px solid #F7302F;border-radius: 5px 225px 225px 5px;">
-        <div class="inlineBlock vertAlignTop fontSize16 lineHeight24" style="padding: 8px 25px;width: 70%; line-height: 32px;">
+    <div class="centerVert leftText" style="margin: 55px 0 0 0;">
+        <div class="inlineBlock vertAlignTop fontSize16 lineHeight24 redBorder" style="width: 70%; line-height: 32px;">
             The most important aspect of Sigma Phi Delta; however, is its <strong>close-knit, diverse brotherhood</strong>. The men of Sigma Phi
                 Delta come from all corners of the country, as well as different areas of the world. Being a member of Sigma Phi
                 Delta not only gives you people to study and hang out with, but gives you <strong>friendships that last a lifetime</strong>
 
             Being a member of Sigma Phi Delta not only alters a man's college experience, but also positively affects the rest of their life.
         </div>
-        <div class="centerText vertAlignTop colWhite inlineBlock" style="height: 300px; width: 300px;">
-            <div class="colWhite bordRad50 height100 width100 circShadow backColRed" style="display:flex;justify-content:center;align-items:center;">
+        <div class="centerText vertAlignTop colWhite inlineBlock">
+            <div class="colWhite bordRad50 height100 width100 circShadow backColRed" style="height: 300px; width: 300px;display:flex;justify-content:center;align-items:center;">
                 <div>
                     <img src="images/symbols/spdgearlogo.png" height="175px" width="150px" class="block centerDiv"/>
                     <div class="amaranth fontSize20" style="height: 50px;padding-top: 5px;">Brotherhood</div>
