Continued rush page styling

--- a/rush.html
+++ b/rush.html
@@ -42,7 +42,7 @@
 <div class="posRel roboto fontSize20 leftText" style="width: 960px; margin: 40px auto 120px auto;min-height: 500px; ">
 
     <!-- Introduction -->
-    <div style="margin: 20px 0 55px 0;">
+    <div style="margin: 20px 0 20px 0;">
         <!-- Title -->
         <div class="inlineBlock amaranth colRed fontSize36">Why rush Sigma Phi Delta?</div>
 
@@ -72,7 +72,7 @@
                 </div>
             </div>
         </div>
-        <div class="inlineBlock vertAlignTop fontSize16 lineHeight24 redBorder" style="width: 70%;">
+        <div class="inlineBlock vertAlignTop fontSize16 lineHeight24 parMargPad" style="width: 70%;">
             No one can truly understand the full perils and workload of a major except those within the major. The members of
             Sigma Phi Delta are all within CEAS (College of Engineering and Applied Sciences), covering a solid breathe of its
             encompassing majors. Members benefit from working along side one another <strong>garnering homework help, study aid, advice
@@ -84,8 +84,8 @@
     </div>
 
     <!-- Professional Benefits -->
-    <div class="centerVert leftText" style="margin: 55px 0 0 0;">
-        <div class="inlineBlock vertAlignTop fontSize16 lineHeight24 redBorder" style="width: 70%;">Possibly some of the greatest advantages of membership in Sigma Phi Delta are the career development opportunities.
+    <div class="centerVert leftText" style="margin: 20px 0 0 0;">
+        <div class="inlineBlock vertAlignTop fontSize16 lineHeight24 parMargPad redBorder" style="width: 70%;">Possibly some of the greatest advantages of membership in Sigma Phi Delta are the career development opportunities.
             As a member of <strong>PGC (Professional Greek Council)</strong> we have access to unique opportunities to help build up a strong
             professional side in any student especially through events we've previously hosted such as 'Ask an Engineer',
             STEM panels, resume reviews, and mock interviews with alumni. Many of our members have received internships while
@@ -111,7 +111,7 @@
 
 
     <!-- Social Benefits -->
-    <div class="centerVert rightText" style="margin: 55px 0 0 0;">
+    <div class="centerVert rightText" style="margin: 20px 0 0 0;">
         <div class="centerText vertAlignTop colWhite inlineBlock">
             <div class="colWhite bordRad50 height100 width100 circShadow backColRed" style="height: 300px; width: 300px;display:flex;justify-content:center;align-items:center;">
                 <div>
@@ -120,7 +120,7 @@
                 </div>
             </div>
         </div>
-        <div class="inlineBlock vertAlignTop fontSize16 lineHeight24 redBorder" style="width: 70%; line-height: 28px;">
+        <div class="inlineBlock vertAlignTop fontSize16 lineHeight24 parMargPad" style="width: 70%; line-height: 28px;">
             While we highly hold the beliefs of strong academics and profession success we also fully understand the importance
             of experiencing the social opportunities university has to offer, as we are only here for so long. Sigma Phi Delta
             engages in a broad spectrum of social activities such as <strong>intramural sports, collaborated events, tailgates</strong>, and participation
@@ -130,8 +130,8 @@
     </div>
 
     <!-- Brotherhood -->
-    <div class="centerVert leftText" style="margin: 55px 0 0 0;">
-        <div class="inlineBlock vertAlignTop fontSize16 lineHeight24 redBorder" style="width: 70%; line-height: 32px;">
+    <div class="centerVert leftText" style="margin: 20px 0 0 0;">
+        <div class="inlineBlock vertAlignTop fontSize16 lineHeight24 redBorder parMargPad" style="width: 70%; line-height: 32px;">
             The most important aspect of Sigma Phi Delta; however, is its <strong>close-knit, diverse brotherhood</strong>. The men of Sigma Phi
                 Delta come from all corners of the country, as well as different areas of the world. Being a member of Sigma Phi
                 Delta not only gives you people to study and hang out with, but gives you <strong>friendships that last a lifetime</strong>
