Rush page Styling complete

--- a/rush.html
+++ b/rush.html
@@ -39,21 +39,21 @@
 <div id="header"></div>
 
 <!-- Content -->
-<div class="posRel roboto fontSize20 leftText" style="width: 960px; margin: 40px auto 120px auto;min-height: 500px; ">
+<div class="posRel roboto fontSize20 leftText" style="width: 960px; margin: 30px auto 120px auto;min-height: 500px; ">
 
     <!-- Introduction -->
-    <div style="margin: 20px 0 20px 0;">
+    <div id="introBlock" style="">
         <!-- Title -->
-        <div class="inlineBlock amaranth colRed fontSize36">Why rush Sigma Phi Delta?</div>
+        <div id="introTitle" class="inlineBlock amaranth colRed">Why rush Sigma Phi Delta?</div>
 
         <!-- List of Rush Events -->
-        <a id="rushflier" href="images/fliers/spring2016/rush.png"><div class="shadow inlineBlock floatRight vertAlignTop pad0 leftText" style="width: 600px; height: 222px; margin: 25px 0 0 25px;border: 5px solid #191919;">
+        <a id="rushflier" href="images/fliers/spring2016/rush.png"><div id="rushflierimage" class="shadow inlineBlock floatRight vertAlignTop pad0 leftText" style="border: 5px solid #191919;">
             <!-- Rush Flier -->
             <img src="images/fliers/spring2016/rush.png" height="100%" width="100%"/>
         </div></a>
 
         <!-- Introduction Paragraph -->
-        <div class="" style="font-size: 1em; line-height: 24px; margin-top: 25px;">
+        <div class="fontSize16" style="line-height: 24px; margin-top: 25px;">
             As the Premier International Fraternity of Engineers, Sigma Phi Delta and its members boast a strong embrace in the
             <strong>"work hard, play hard"</strong> mentality. With that said, the Beta-Eta Chapter at Stony Brook University proves itself to be
             both a social and professional organization. Rush is an excellent opportunity in which anyone interested in
