Added EE Major to members file

--- a/members.html
+++ b/members.html
@@ -179,12 +179,13 @@
             if      (major=='ESG')                      {  return 'Engineering Science';                                        }
             else if (major=='CIV')                      {  return 'Civil Engineering';                                          }
             else if (major=='CE')                       {  return 'Computer Engineering';                                       }
+            else if (major=='EE')                       {  return 'Electrical Engineering';                                     }
             else if (major=='CSE' || major=='CS')       {  return 'Computer Science';                                           }
             else if (major=='ISE' || major=='IS')       {  return 'Information Systems';                                        }
             else if (major=='MEC' || major=='ME')       {  return 'Mechanical Engineering';                                     }
             else if (major=='AMS' )                     {  return '<div class="fontSize14">Applied Math and Statistics</div>';  }
             else if (major=='ES' )                      {  return 'Environmental Science';                                      }
-            else if (major=='TSM' )                     {  return '<div class="fontSize14">Technical Systems Mgmt.</div>'; }
+            else if (major=='TSM' )                     {  return '<div class="fontSize14">Technical Systems Mgmt.</div>';      }
             else                                        {  return '';                                                           }
         }
 
